@@ -1,3 +1,10 @@
+2007-10-22  Henry Proudhon  <henry.proudhon@ensmp.fr>
+
+	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
+	(composite): New field,
+	(setComposite): Implemented,
+	(getComposite): Return from field.
+
 2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>
 
 	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
